fixed link wrapping

--- a/resources/style.css
+++ b/resources/style.css
@@ -61,6 +61,5 @@ button:active {
 #savedLeadsDisplay {
     max-width: 100vw;
     padding: 0;
-    font-weight: bold;
 
 }
